tests/cfg/js/success/cfg_unary2.js
var x = 1;
x = ++x;
x /= x--;
