tests/cfg/js/error/parse/parse_XXXasi2.js
/* from http://inimino.org/~inimino/blog/javascript_semicolons */
var i=1;
i
++;
